# SpectralSensor

./: .gitignore  Makefile  Notizen Bachlor Arbeit  Notizen Bachlor Arbeit.txt  README.md  screenlog.0
Abgabe/: mail
Anhang/Hardware/: Sensorboard.sch
Code/: CMakeLists.txt  Makefile  default_values.h
Code/AS7261-test/: AS726X.c  Makefile
Code/SparkFun_AS726X_Arduino_Library-master/src/: AS726X.cpp
Code/config/: calibrationL.csv  calibrationY.csv  calibrationZ.csv
Code/lib/influxDB_http_Libary/: influxdb.c  influxdb.h
Code/lib/wiringPi_AS726X_Libary/: AS726X.c  AS726X.h
Code/python-test/: gpio-high.py  i2c-read.py  untitled
Code/src/: Mux_Test.c  main.c  main_auto.c  measurement.c  measurement.h  readCSV.c  untitled.c  welcome.c
Code/wiringPi_AS726X_Libary/: AS726X.c  AS726X.h  Makefile  influxdb.c  influxdb.h  main.c  welcome.c
Grafana/: ExampleDash.JSON
Hardware/Datasheet/: Sensor-platiene.brd  Sensor-platiene.sch
Hardware/Desing-Rules/: jlcpcb2layer.dru
Hardware/Eagle lib/: 150120RS75000_Eagle_WL-SMCW_rev20b.lbr
Hardware/Eagle-Lib/: 10118194-0011LF-pcb-part-libraries.epw  155060GS75300_Eagle_WL-SMSW_rev20b.lbr  lm1117.lbr
Hardware/GERBER/: RaspberryPi4-I2C-Shield.cam
Hardware/Platinen-Layout/: Sensor-platiene.b##  Sensor-platiene.b#1  Sensor-platiene.b#2  Sensor-platiene.b#3  Sensor-platiene.b#4  (+37 more)
Latex/: Bachloarbeit.tex  test.tex
Platinen-Layout/: Sensorboard.brd  Sensorboard.s##  Sensorboard.sch
Vortrag/: 03_Antrittsvortrag_Beispiel_1.pptx  03_Antrittsvortrag_Lennard_B.pptx  ~$03_Antrittsvortrag_Lennard_B.pptx
src/: welcome.h
(+113 files in other folders)
